[package]
name = "msafe_miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
sha3 = "0.9.1"
hex-literal = "0.3.4"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
curve25519-dalek = "3.2.1"